@@ -5,42 +5,45 @@ import org.json.JSONArray;
 import org.json.JSONObject;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
-import smu.poodle.smnavi.map.domain.DetailPosition;
-import smu.poodle.smnavi.map.domain.Edge;
+import smu.poodle.smnavi.map.domain.path.DetailPosition;
+import smu.poodle.smnavi.map.domain.path.Edge;
 import smu.poodle.smnavi.errorcode.ExternApiErrorCode;
-import smu.poodle.smnavi.map.dto.DetailPositionDto;
-import smu.poodle.smnavi.map.dto.TransitSubPathDto;
+import smu.poodle.smnavi.map.dto.PathDto;
 import smu.poodle.smnavi.map.externapi.ApiConstantValue;
 import smu.poodle.smnavi.map.externapi.ApiKeyValue;
 import smu.poodle.smnavi.map.externapi.ApiUtilMethod;
 import smu.poodle.smnavi.map.externapi.GpsPoint;
+import smu.poodle.smnavi.map.repository.DetailPositionRepository;
 import smu.poodle.smnavi.map.repository.TransitRepository;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 @Transactional
 public class RouteDetailPositionApi {
-    private final TransitRepository transitRepository;
-    private final String HOST_URL = "https://api.odsay.com/v1/api/loadLane";
     private final ApiConstantValue apiConstantValue;
 
-    public void makeDetailPositionList(TransitSubPathDto transitSubPathDto, String mapObj, List<Edge> edges){
+    private final TransitRepository transitRepository;
+    private final DetailPositionRepository detailPositionRepository;
+
+    public void makeDetailPositionList(PathDto.SubPathDto subPathDto, String mapObj, List<Edge> edges) {
         boolean detailExist = true;
+
         for (Edge edge : edges) {
-            detailExist = detailExist & edge.isDetailExist();
+            detailExist = detailExist & edge.getDetailExist();
         }
-        if(detailExist) {
+        if (detailExist) {
             return;
         }
 
+        String HOST_URL = "https://api.odsay.com/v1/api/loadLane";
+
         JSONObject jsonObject = ApiUtilMethod.urlBuildWithJson(HOST_URL,
                 ExternApiErrorCode.UNSUPPORTED_OR_INVALID_GPS_POINTS,
-                new ApiKeyValue("apiKey",apiConstantValue.getOdsayApiKey()),
-                new ApiKeyValue("mapObject", "0:0@"+mapObj));
+                new ApiKeyValue("apiKey", apiConstantValue.getOdsayApiKey()),
+                new ApiKeyValue("mapObject", "0:0@" + mapObj));
 
         JSONObject info = jsonObject.getJSONObject("result").getJSONArray("lane").getJSONObject(0);
         int transitType = info.getInt("class");
@@ -49,20 +52,19 @@ public class RouteDetailPositionApi {
                 .getJSONArray("graphPos");
 
         List<List<DetailPosition>> positionLists;
-        if(transitType == 1){
+        if (transitType == 1) {
             positionLists = makeBusDetailPositionList(graphPos, edges);
-        }
-        else{
+        } else {
             positionLists = makeSubwayDetailPositionList(graphPos, edges);
         }
 
-        List<DetailPositionDto> positionListForSubPath = new ArrayList<>();
+        List<PathDto.DetailPositionDto> positionListForSubPath = new ArrayList<>();
         for (List<DetailPosition> positionList : positionLists) {
-            transitRepository.saveDetailPositions(positionList);
-            positionListForSubPath.addAll(positionList.stream().map(DetailPositionDto::new).collect(Collectors.toList()));
+            detailPositionRepository.saveAll(positionList);
+            positionListForSubPath.addAll(positionList.stream().map(PathDto.DetailPositionDto::new).toList());
         }
 
-        transitSubPathDto.setGpsDetail(positionListForSubPath);
+        subPathDto.setGpsDetail(positionListForSubPath);
     }
 
     private List<List<DetailPosition>> makeBusDetailPositionList(JSONArray posArray, List<Edge> edges) {
@@ -78,7 +80,7 @@ public class RouteDetailPositionApi {
                 JSONObject pos = posArray.getJSONObject(posIdx);
                 GpsPoint detailPos = new GpsPoint(pos.getBigDecimal("x").toString(), pos.getBigDecimal("y").toString());
 
-                if(isEmpty) {
+                if (isEmpty) {
                     edge.setDetailExistTrue();
                     detailPositionList.add(DetailPosition.builder()
                             .x(detailPos.getGpsX())
@@ -103,7 +105,7 @@ public class RouteDetailPositionApi {
 
         for (Edge edge : edges) {
             List<DetailPosition> detailPositionList = transitRepository.isContainDetailPos(edge);
-            if(detailPositionList.isEmpty()) {
+            if (detailPositionList.isEmpty()) {
                 DetailPosition lastDetailPosition = null;
                 while (posIdx < posArray.length()) {
                     JSONObject pos = posArray.getJSONObject(posIdx);
@@ -123,12 +125,11 @@ public class RouteDetailPositionApi {
                     lastDetailPosition = curDetailPosition;
                     posIdx++;
                 }
-            }
-            else{
+            } else {
                 GpsPoint lastDetailPos = null;
                 while (posIdx < posArray.length()) {
                     JSONObject pos = posArray.getJSONObject(posIdx);
-                   GpsPoint curDetailPos = new GpsPoint(pos.getBigDecimal("x").toString(), pos.getBigDecimal("y").toString());
+                    GpsPoint curDetailPos = new GpsPoint(pos.getBigDecimal("x").toString(), pos.getBigDecimal("y").toString());
                     if (lastDetailPos != null &&
                             curDetailPos.getGpsX().equals(lastDetailPos.getGpsX()) &&
                             curDetailPos.getGpsY().equals(lastDetailPos.getGpsY())) {
